--- a/index.html
+++ b/index.html
@@ -10,14 +10,63 @@
         <h1 class="title">Frizerski salon - Eden</h1>
     </header>
     <div class="image-slider">
-        <img class="slider-image" src="images/img1.jpg" height="500px" width="500px" alt="Image 1">
-        <img class="slider-image" src="images/img2.jpg" height="500px" width="500px"alt="Image 2">
-        <img class="slider-image" src="images/img3.jpg" height="500px" width="500px"alt="Image 3">
+        <img class="slider-image" src="images/img1.jpg" alt="Image 1">
+        <img class="slider-image" src="images/img2.jpg" alt="Image 2">
+        <img class="slider-image" src="images/img3.jpg" alt="Image 3">
     </div>
     <div class="button-container">
         <button id="prev">Previous</button>
         <button id="next">Next</button>
     </div>
+    <section class="pricing">
+        <h2>Our Prices</h2>
+        <div class="table-container">
+            <div class="table-background">
+                <table>
+                    <tr>
+                        <th colspan="2" class="naslov-tablice">Men</th>
+                    </tr>
+                    <tr>
+                        <th>Service</th>
+                        <th>Price</th>
+                    </tr>
+                    <tr>
+                        <td>Haircut</td>
+                        <td>$30</td>
+                    </tr>
+                    <tr>
+                        <td>Shave</td>
+                        <td>$20</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="table-background">
+                <table>
+                    <tr>
+                        <th colspan="2" class="naslov-tablice">Women</th>
+                    </tr>
+                    <tr>
+                        <th>Service</th>
+                        <th>Price</th>
+                    </tr>
+                    <tr>
+                        <td>Haircut</td>
+                        <td>$50</td>
+                    </tr>
+                    <tr>
+                        <td>Coloring</td>
+                        <td>$100</td>
+                    </tr>
+                    <tr>
+                        <td>Styling</td>
+                        <td>$70</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </section>
+    
+    
     <script src="script.js"></script>
 </body>
 </html>
