--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>Hair Salon</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
 </head>
 <body>
     <header>
-        <h1 class="title">Frizerski salon - Eden</h1>
+        <h1 class="title">Frizerski studio - Eden</h1>
     </header>
     <div class="image-slider">
         <img class="slider-image" src="images/img1.jpg" alt="Image 1">
@@ -15,57 +16,109 @@
         <img class="slider-image" src="images/img3.jpg" alt="Image 3">
     </div>
     <div class="button-container">
-        <button id="prev">Previous</button>
-        <button id="next">Next</button>
+        <button id="prev">Prethodna</button>
+        <button id="next">Sljedeća</button>
     </div>
     <section class="pricing">
-        <h2>Our Prices</h2>
+        <h2>Naše cijene</h2>
         <div class="table-container">
             <div class="table-background">
                 <table>
                     <tr>
-                        <th colspan="2" class="naslov-tablice">Men</th>
+                        <th colspan="2" class="naslov-tablice">Žene</th>
                     </tr>
                     <tr>
-                        <th>Service</th>
-                        <th>Price</th>
+                        <th>Usluga</th>
+                        <th>Cijena</th>
                     </tr>
                     <tr>
-                        <td>Haircut</td>
-                        <td>$30</td>
+                        <td>Šišanje kose</td>
+                        <td>30 €</td>
                     </tr>
                     <tr>
-                        <td>Shave</td>
-                        <td>$20</td>
+                        <td>Brijanje</td>
+                        <td>20 €</td>
+                    </tr>
+                    <tr>
+                        <td>Šišanje kose</td>
+                        <td>30 €</td>
+                    </tr>
+                    <tr>
+                        <td>Brijanje</td>
+                        <td>20 €</td>
+                    </tr>
+                    <tr>
+                        <td>Šišanje kose</td>
+                        <td>30 €</td>
+                    </tr>
+                    <tr>
+                        <td>Brijanje</td>
+                        <td>20 €</td>
                     </tr>
                 </table>
             </div>
             <div class="table-background">
                 <table>
                     <tr>
-                        <th colspan="2" class="naslov-tablice">Women</th>
+                        <th colspan="2" class="naslov-tablice">Muškarci</th>
                     </tr>
                     <tr>
-                        <th>Service</th>
-                        <th>Price</th>
+                        <th>Usluga</th>
+                        <th>Cijena</th>
                     </tr>
                     <tr>
-                        <td>Haircut</td>
-                        <td>$50</td>
+                        <td>Šišanje kose</td>
+                        <td>30 €</td>
                     </tr>
                     <tr>
-                        <td>Coloring</td>
-                        <td>$100</td>
+                        <td>Brijanje</td>
+                        <td>20 €</td>
                     </tr>
                     <tr>
-                        <td>Styling</td>
-                        <td>$70</td>
+                        <td>Šišanje kose</td>
+                        <td>30 €</td>
+                    </tr>
+                    <tr>
+                        <td>Brijanje</td>
+                        <td>20 €</td>
+                    </tr>
+                    <tr>
+                        <td>Šišanje kose</td>
+                        <td>30 €</td>
+                    </tr>
+                    <tr>
+                        <td>Brijanje</td>
+                        <td>20 €</td>
                     </tr>
                 </table>
             </div>
         </div>
     </section>
-    
+    <section class="contact-info">
+        <h2>Kontakt</h2>
+        <table>
+            <tr>
+                <th>Adresa</th>
+                <td>Put mira 13, 22300 Knin</td>
+            </tr>
+            <tr>
+                <th>Telefon</th>
+                <td>022-222-222</td>
+            </tr>
+            <tr>
+                <th>Mobitel</th>
+                <td>099/888-8888</td>
+            </tr>
+            <tr>
+                <th>Vlasnici</th>
+                <td>Ana Marković i Mateja Jurić Grgić</td>
+            </tr>
+            <tr>
+                <th>OIB</th>
+                <td>5555555555</td>
+            </tr>
+        </table>
+    </section>
     
     <script src="script.js"></script>
 </body>
