--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
-<!DOCTYPE html>
 <html>
 <head>
     <title>Hair Salon</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
 </head>
 <body>
     <header>
+        <img class="logo" src="images/logo-removebg.png" alt="Logo">
         <h1 class="title">Frizerski studio - Eden</h1>
     </header>
+    
     <div class="image-slider">
         <img class="slider-image" src="images/img1.jpg" alt="Image 1">
         <img class="slider-image" src="images/img2.jpg" alt="Image 2">
         <img class="slider-image" src="images/img3.jpg" alt="Image 3">
+        <img class="slider-image" src="images/img4.jpg" alt="Image 4">
     </div>
     <div class="button-container">
         <button id="prev">Prethodna</button>
