--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     
     <div class="image-slider">
-        <img class="slider-image" src="images/img1.jpg" alt="Image 1">
+        <img class="slider-image" src="https://github.com/antePandzic/Frizerski-salon-Eden/tree/main/images" alt="Image 1">
         <img class="slider-image" src="images/img2.jpg" alt="Image 2">
         <img class="slider-image" src="images/img3.jpg" alt="Image 3">
         <img class="slider-image" src="images/img4.jpg" alt="Image 4">
