--- a/index.html
+++ b/index.html
@@ -22,81 +22,17 @@
         <button id="prev">Prethodna</button>
         <button id="next">Sljedeća</button>
     </div>
-    <section class="pricing">
-        <h2>Naše cijene</h2>
-        <div class="table-container">
-            <div class="table-background">
-                <table>
-                    <tr>
-                        <th colspan="2" class="naslov-tablice">Žene</th>
-                    </tr>
-                    <tr>
-                        <th>Usluga</th>
-                        <th>Cijena</th>
-                    </tr>
-                    <tr>
-                        <td>Šišanje kose</td>
-                        <td>30 €</td>
-                    </tr>
-                    <tr>
-                        <td>Brijanje</td>
-                        <td>20 €</td>
-                    </tr>
-                    <tr>
-                        <td>Šišanje kose</td>
-                        <td>30 €</td>
-                    </tr>
-                    <tr>
-                        <td>Brijanje</td>
-                        <td>20 €</td>
-                    </tr>
-                    <tr>
-                        <td>Šišanje kose</td>
-                        <td>30 €</td>
-                    </tr>
-                    <tr>
-                        <td>Brijanje</td>
-                        <td>20 €</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="table-background">
-                <table>
-                    <tr>
-                        <th colspan="2" class="naslov-tablice">Muškarci</th>
-                    </tr>
-                    <tr>
-                        <th>Usluga</th>
-                        <th>Cijena</th>
-                    </tr>
-                    <tr>
-                        <td>Šišanje kose</td>
-                        <td>30 €</td>
-                    </tr>
-                    <tr>
-                        <td>Brijanje</td>
-                        <td>20 €</td>
-                    </tr>
-                    <tr>
-                        <td>Šišanje kose</td>
-                        <td>30 €</td>
-                    </tr>
-                    <tr>
-                        <td>Brijanje</td>
-                        <td>20 €</td>
-                    </tr>
-                    <tr>
-                        <td>Šišanje kose</td>
-                        <td>30 €</td>
-                    </tr>
-                    <tr>
-                        <td>Brijanje</td>
-                        <td>20 €</td>
-                    </tr>
-                </table>
-            </div>
+    <div class="about-us">
+        <h2 class="o-nama">O Nama</h2>
+        <div class="content">
+          <p class="p1">Dobro došli u naš salon, mjesto gdje se strast susreće s kreativnošću, a vaša kosa postaje naše platno. U našem salonu vjerujemo u transformacijsku moć sjajne frizure. Svjesni smo da se ne radi samo o jednostavnom šišanju ili promjeni boje; radi se o podizanju duha, isticanju vaše individualnosti i prihvaćanju ljepote promjene.</p>
+          <p class="p2">U našem frizerskom salonu održavamo nepokolebljivu posvećenost korištenju samo najboljih proizvoda. Smatramo da naši klijenti zaslužuju samo najbolje. Pažljivo odabrani, visokokvalitetni i etički nabavljeni, naši proizvodi su dizajnirani da ne samo njeguju vašu kosu, već i promoviraju njeno zdravlje i sjaj. Svaki tretman je usmjeren na pružanje najboljeg za vašu kosu, ističući njenu prirodnu ljepotu dok je štiti od potencijalnih oštećenja.</p>
+          <p class="p3">Ponosimo se našim timom stručnjaka koji svakodnevno teže izvrsnosti. Svaki novi član našeg tima prolazi kroz opsežan proces obuke, osiguravajući da su upoznati s najnovijim trendovima, tehnikama i standardima u industriji kose. Vjerujemo da kontinuirano učenje i rast našeg osoblja doprinose superiornoj usluzi koju pružamo. Kako rastemo, osiguravamo da održimo našu bit živom: eksperimentiramo, inoviramo i uvijek isprobavamo nove stvari kako bi naša ponuda bila uzbudljiva i osvježavajuća.</p>
+          <p class="p4">Naša misija, "Stvarajte bolji svakodnevni život," zaista obuhvaća ono što nastojimo postići za naše klijente. Vjerujemo da mijenjajući vašu kosu, mijenjamoo vaše svakodnevne doživljaje. Kada izgledate dobro, osjećate se dobro, a kada se osjećate dobro, sve oko vas izgleda svjetlije. Stoga težimo ne samo transformirati vašu kosu, već i donijeti pozitivnu promjenu u vaš svakodnevni život.</p>
+          <p class="p5">Naše je putovanje u tijeku, i nastojimo biti bolji, biti najbolji. Naša ambicija je biti trendsetter u svijetu njege kose, pružajući vrhunske usluge i iskustva klijenata. Naš salon nije samo mjesto za šišanje; to je zajednica gdje se čuje vaš glas.</p>
         </div>
-    </section>
+      </div>
+    
     <section class="contact-info">
         <h2>Kontakt</h2>
         <table>
