--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
         <img class="logo" src="images/logo-removebg.png" alt="Logo">
         <h1 class="title">Frizerski studio - Eden</h1>
+        <div class="menu-container">
+            <div class="menu-bar"></div>
+            <div class="menu-bar"></div>
+            <div class="menu-bar"></div>
+        </div>
     </header>
     <div class="image-slider">
         <img class="slider-image" src="images/img1.jpg" alt="Image 1">
@@ -28,23 +33,22 @@
                 <p class="p1">Mjesto gdje strast susreće kreativnost, a vaša kosa postaje naše platno. Vjerujemo u transformacijsku moć sjajne frizure. Svjesni smo da se ne radi samo o jednostavnom šišanju ili promjeni boje kose; radi se o podizanju duha, isticanju vaše individualnosti i prihvaćanju ljepote promjene.</p>
             </div>
             <div class="card">
-              <p class="p2">Mi održavamo nepokolebljivu posvećenost korištenju samo najboljih proizvoda. Naši klijenti zaslužuju samo najbolje. Pažljivo odabrani, visokokvalitetni i etički nabavljeni, naši proizvodi su dizajnirani da ne samo njeguju vašu kosu, već i promoviraju njeno zdravlje i sjaj. Svaki tretman je usmjeren na pružanje najboljeg za vašu kosu, ističući njenu prirodnu ljepotu dok je štiti od potencijalnih oštećenja.</p>
+                <p class="p2">Mi održavamo nepokolebljivu posvećenost korištenju samo najboljih proizvoda. Naši klijenti zaslužuju samo najbolje. Pažljivo odabrani, visokokvalitetni i etički nabavljeni, naši proizvodi su dizajnirani da ne samo njeguju vašu kosu, već i promoviraju njeno zdravlje i sjaj. Svaki tretman je usmjeren na pružanje najboljeg za vašu kosu, ističući njenu prirodnu ljepotu dok je štiti od potencijalnih oštećenja.</p>
             </div>
             <div class="card">
-              <p class="p3">Ponosimo se našim timom stručnjaka koji svakodnevno teže izvrsnosti. Svaki novi član našeg tima prolazi kroz opsežan proces obuke, osiguravajući da su upoznati s najnovijim trendovima, tehnikama i standardima u industriji kose. Kako rastemo, održavamo našu bit živom: eksperimentiramo, inoviramo i uvijek isprobavamo nove stvari kako bi naša ponuda bila uzbudljiva i osvježavajuća.</p>
+                <p class="p3">Ponosimo se našim timom stručnjaka koji svakodnevno teže izvrsnosti. Svaki novi član našeg tima prolazi kroz opsežan proces obuke, osiguravajući da su upoznati s najnovijim trendovima, tehnikama i standardima u industriji kose. Kako rastemo, održavamo našu bit živom: eksperimentiramo, inoviramo i uvijek isprobavamo nove stvari kako bi naša ponuda bila uzbudljiva i osvježavajuća.</p>
             </div>
             <div class="card">
-              <p class="p4">Naša misija, "Stvarajte bolji svakodnevni život," zaista obuhvaća ono što nastojimo postići za naše klijente. Vjerujemo da mijenjajući vašu kosu, mijenjamo vašu svakodnevicu. Kada izgledate dobro, osjećate se dobro, a kada se osjećate dobro, sve oko vas izgleda svjetlije. Stoga težimo ne samo transformirati vašu kosu, već i donijeti pozitivnu promjenu u Vaš svakodnevni život.</p>
+                <p class="p4">Naša misija, "Stvarajte bolji svakodnevni život," zaista obuhvaća ono što nastojimo postići za naše klijente. Vjerujemo da mijenjajući vašu kosu, mijenjamo vašu svakodnevicu. Kada izgledate dobro, osjećate se dobro, a kada se osjećate dobro, sve oko vas izgleda svjetlije. Stoga težimo ne samo transformirati vašu kosu, već i donijeti pozitivnu promjenu u Vaš svakodnevni život.</p>
             </div>
             <div class="card">
-              <p class="p5">Naše putovanje je u tijeku, i nastojimo biti bolji i najbolji. Naša ambicija je biti trendsetter u svijetu njege kose, pružajući vrhunske usluge i iskustva klijenata. Naš salon nije samo mjesto za šišanje; to je zajednica gdje se čuje vaš glas.</p>
+                <p class="p5">Naše putovanje je u tijeku, i nastojimo biti bolji i najbolji. Naša ambicija je biti trendsetter u svijetu njege kose, pružajući vrhunske usluge i iskustva klijenata. Naš salon nije samo mjesto za šišanje; to je zajednica gdje se čuje vaš glas.</p>
             </div>
-          </div>
-          <button id="next-card">Sljedeća</button>
-      </div>
-      <h2 class="kontakt">Kontakt</h2>
-    <section class="contact-info">
-        
+        </div>
+        <button id="next-card">Sljedeća</button>
+    </div>
+    <h2 class="kontakt">Kontakt</h2>
+    <section id="contact-info" class="contact-info">
         <table>
             <tr>
                 <th>Adresa</th>
@@ -68,7 +72,6 @@
             </tr>
         </table>
     </section>
-    
     <script src="script.js"></script>
 </body>
 </html>
