--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <head>
     <title>Hair Salon</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
 </head>
 <body>
+    <label>
+        <input type="checkbox">
+        <span class="menu"> <span class="hamburger"></span> </span>
+        <ul>
+          <li> <a href="index.html">Početna</a> </li>
+          <li> <a href="contact.html">Kontakt</a> </li>
+        </ul>
+    </label>
     <header>
-        <img class="logo" src="images/logo-removebg.png" alt="Logo">
-        <h1 class="title">Frizerski studio - Eden</h1>
-        <div class="menu-container">
-            <div class="menu-bar"></div>
-            <div class="menu-bar"></div>
-            <div class="menu-bar"></div>
+        <div class="logo-container">
+            <img class="logo" src="images/logo-removebg.png" alt="Logo">
         </div>
+        <h1 class="title">Frizerski studio - Eden</h1>
     </header>
     <div class="image-slider">
         <img class="slider-image" src="images/img1.jpg" alt="Image 1">
@@ -47,31 +51,6 @@
         </div>
         <button id="next-card">Sljedeća</button>
     </div>
-    <h2 class="kontakt">Kontakt</h2>
-    <section id="contact-info" class="contact-info">
-        <table>
-            <tr>
-                <th>Adresa</th>
-                <td>Put mira 13, 22300 Knin</td>
-            </tr>
-            <tr>
-                <th>Telefon</th>
-                <td>022-222-222</td>
-            </tr>
-            <tr>
-                <th>Mobitel</th>
-                <td>099/888-8888</td>
-            </tr>
-            <tr>
-                <th>Vlasnici</th>
-                <td>Ana Marković i Mateja Jurić Grgić</td>
-            </tr>
-            <tr>
-                <th>OIB</th>
-                <td>5555555555</td>
-            </tr>
-        </table>
-    </section>
     <script src="script.js"></script>
 </body>
 </html>
