--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <title>Contact info</title>
 </head>
 <body>
+    <label>
+        <input type="checkbox">
+        <span class="menu"> <span class="hamburger"></span> </span>
+        <ul>
+          <li> <a href="index.html">Početna</a> </li>
+          <li> <a href="contact.html">Kontakt</a> </li>
+        </ul>
+    </label>
     <h2 class="kontakt">Kontakt</h2>
     <div class="contact-container">
     <div class="contact">
@@ -36,6 +45,5 @@
     </section>
 </div>
 </div>
-    
 </body>
 </html>
