--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1 class="title">Frizerski studio - Eden</h1>
     </header>
     <div class="image-slider">
-        <img class="slider-image" src="images/img1.jpg" alt="Image 1">
+        <img class="slider-image active" src="images/img1.jpg" alt="Image 1">
         <img class="slider-image" src="images/img2.jpg" alt="Image 2">
         <img class="slider-image" src="images/img3.jpg" alt="Image 3">
         <img class="slider-image" src="images/img4.jpg" alt="Image 4">
